# pittgoogle-client

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  CHANGELOG.md  README.md  conda_env.yml  pittgoogle_env.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: DocumentationBuild.yml  DocumentationPublish.yml  PackagePublish.yml  PackageTest.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  listings.rst
docs/source/_static/css/: custom.css
docs/source/access-data/: bigquery.rst  cloud-storage.rst  data-overview.rst  gcp-setup.rst  index.rst  initial-setup.rst  install-pittgoogle.rst  pubsub.rst  tutorials.rst
docs/source/api/: auth-docstring.rst  auth.rst  bigquery.rst  cloud-storage-docstring.rst  figures.rst  index.rst  pubsub-docstring.rst  pubsub-members.rst  pubsub.rst  types-members.rst  types.rst  utils.rst
docs/source/api-reference/: alert.rst  auth.rst  exceptions.rst  index.rst  registry.rst  schema.rst  types_.rst  utils.rst
docs/source/api/pittgoogle/: auth.rst  bigquery.rst  figures.rst  types.rst  utils.rst
docs/source/faq/: cost.rst  find-project-id.rst  index.rst  what-is-bigquery.rst  what-is-cloud-run.rst  what-is-cloud-storage.rst  what-is-pubsub.rst
docs/source/for-developers/: add-new-schema-map.md  add-new-schema-map.rst  add-new-schema.md  add-new-schema.rst  build-docs-sphinx.md  get-alerts-for-testing.rst  index.rst  manage-dependencies-poetry.md  pypi.md  release-new-version.md  setup-development-mode.md  setup-environment.md
docs/source/main/: listing.rst
docs/source/main/faq/: cost.rst  index.rst
docs/source/main/for-developers/: build-docs-sphinx.md  index.rst  manage-dependencies-poetry.md  release-new-version.md  setup-environment.md
docs/source/main/one-time-setup/: authentication.rst  google-sdk.rst  index.rst  install.rst  project.rst
docs/source/one-time-setup/: authentication-oauth.rst  authentication.rst  enable-apis.rst  env-vars.rst  google-sdk.rst  install.rst  project.rst
docs/source/overview/: adv-setup.rst  authentication-oauth2.rst  authentication-svcact.rst  authentication.rst  bigquery-tutorial.rst  bigquery.rst  cloud-storage-tutorial.rst  cloud-storage.rst  cost.rst  data-bigquery.rst  data-cloud-storage.rst  data-pubsub.rst  data-resources.rst  data.rst  env-vars.rst  gcp-setup.rst  initial-setup.rst  install-pittgoogle.rst  install.rst  oauth2.rst  overview.rst  project.rst  pubsub.rst  setup-env-vars.rst  setup-project.rst  setup.rst  tutorials.rst
docs/source/surveys/: gaia.rst  index.rst  lsst.rst  lvk.rst  swift.rst  ztf.rst
docs/source/tutorials/: bigquery.rst
docs/tmp/api/: auth-docstring.rst  auth.rst  bigquery.rst  figures.rst  index.rst  pubsub-docstring.rst  pubsub.rst  types.rst
pittgoogle/: __init__.py  alert.py  auth.py  bigquery.py  exceptions.py  figures.py  pubsub.py  registry.py  schema.py  types.py  types_.py  utils.py
pittgoogle/registry_manifests/: schemas.yml
pittgoogle/schemas/maps/: TEMPLATE.yml  elasticc.yml  lsst-lite.yml  lsst.yml  lvk.yml  rapid.yml  ztf-lite.yml
tests/: conftest.py  load_data.py  test_alert.py  test_placeholder.py  test_registry.py  test_schema.py  test_utils.py
(+55 files in other folders)
