[tool.poetry]
name = "pittgoogle-client"
repository = "https://github.com/mwvgroup/pittgoogle-client"
version = "0.0.0"
description = "Client utilities for the Pitt-Google astronomical alert broker."
keywords = ["astronomy", "alert", "broker"]
authors = ["Troy Raen"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [{ include = "pittgoogle" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.dependencies]
python = "^3.8"
aplpy = "^2.1"
astropy = ">=4.0"
fastavro = "^1.4"
google-cloud-bigquery = "^3.7"
google-cloud-pubsub = "^2.15"
matplotlib = "^3.5"
pandas = "^1.3"
tabulate = "^0.9"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
docutils = "<0.17" # render lists properly
myst-parser = "*"
sphinx = "5.3.0"
sphinx-copybutton = "0.5.1"
sphinx_autodoc_typehints = "1.22"
sphinx_rtd_theme = "1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
