[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt

# use black with other tools
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html
[isort]
profile = black
[flake8]
max-line-length = 88
extend-ignore = E203
[pylint]
max-line-length = 88
